Correct text-align. Change justify for start

--- a/css/BodyText.css
+++ b/css/BodyText.css
@@ -8,7 +8,7 @@
     padding: 1.1vh 15px 3vh;
     max-width: 650px;
     font-size: 0.82rem;
-    text-align: justify;
+    text-align: start;
     line-height: 1.5rem;
     
 }
